--- a/index.html
+++ b/index.html
@@ -4,9 +4,16 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Testando</title>
 </head>
 <body>
-    
+    <h1>Mais um teste</h1>
+    <p>Olá, mundo</p>
+    <ul>
+        <h2>Oque iremos fazer?</h2>
+        <li>Linkar o code com o git</li>
+        <li>colocar para o bot falar no discord</li>
+        <li>verificar se ele manda diretamente um link</li>
+    </ul>
 </body>
 </html>
